--- a/app/src/main/res/layout/trip_item2.xml
+++ b/app/src/main/res/layout/trip_item2.xml
@@ -80,7 +80,6 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginLeft="16dp"
                 android:layout_marginTop="8dp"
-                android:text="pr"
                 android:textSize="@dimen/size_18"
                 app:layout_constraintStart_toEndOf="@+id/imageview_trip"
                 app:layout_constraintTop_toBottomOf="@+id/textview_tripdestination" />
@@ -94,7 +93,7 @@
                 android:layout_marginTop="12dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
-                android:text="rating"
+                android:textSize="@dimen/size_18"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/textview_price"
                 app:layout_constraintTop_toBottomOf="@+id/textview_tripdestination" />
