--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,4 +22,14 @@
         <item name="android:textColor">@android:color/white</item>
     </style>
 
+    <style name="DetailsTextviews">
+        <item name="android:textSize">@dimen/size_16</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/colorPrimaryDark</item>
+    </style>
+
+    <style name="DetailsShown">
+        <item name="android:textSize">@dimen/size_16</item>
+    </style>
+
 </resources>
